--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,10 +1,9 @@
 :root {
     --brand-color: #2196F3;
-    --title-text-color: #212121;
-    --primary-text-color: #757575;
-    --secondary-text-color: #212121;
-    --primary-bg-color: #ffffff;
-    --logo-font-family: "Raleway";
-    --primary-font-family: "Roboto";
+    --title-text-color: #FFFFFF;
+    --primary-text-color: #FFFFFF;
+    --secondary-text-color: #2E363E;
+    --primary-bg-color: #081130;
+    --primary-font-family: "Montserrat";
     --transition-property: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
