--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,19 +1,21 @@
 .container {
     min-width: 320px;
+    max-width: 1400px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    outline: 1px solid green;
 
-    @media screen and (min-width: 480px) {
-        width: 480px;
-    }
+    // @media screen and (min-width: 480px) {
+    //     max-width: 480px;
+    // }
 
-    @media screen and (min-width: 768px) {
-        width: 768px;
-    }
+    // @media screen and (min-width: 768px) {
+    //     max-width: 768px;
+    // }
 
-    @media screen and (min-width: 1200px) {
-        width: 1200px;
-    }
+    // @media screen and (min-width: 1200px) {
+    //     max-width: 1200px;
+    // }
 
 }
