--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding: 0;
     max-width: 100%;
+    outline: 1px solid red;
     // @media screen and (min-width: 480px) {
     //     width: 480px;
     // }
