--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 // @import './components/modal-form';
 
 @import './layout/header';
-// @import './layout/hero';
+@import './layout/hero';
 // @import './layout/content';
 // @import './layout/work';
 // @import './layout/team';
