--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
     background-color: #081130;
+    border-bottom: 3px solid #ECECEC;
 }
 
 .header-wrapper {
@@ -15,10 +16,8 @@
     }
 }
 .nav {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
+    @include font($fw: 700, $fs: 20px, $lh: 26px, $ls: 0.02em);
+
     &__list {
     display: flex;
     flex-direction: column;
@@ -28,7 +27,11 @@
         flex-direction: row;
         @include font($fw: 700, $fs: 20px, $lh: 26px, $ls: 0.02em);
     }
-        
+    @media screen and (min-width: 1400px) {
+        gap: 60px;
+        @include font($fw: 700, $fs: 20px, $lh: 26px, $ls: 0.02em);
+    }
+    
     }
     
 
@@ -53,11 +56,16 @@
         align-items: center;
         gap: 40px;
     }
+    @media screen and (min-width: 1400px) {
+        gap: 60px;
+    }
     
 
     &__item {
         color: var(--primary-text-color);
         text-align: end;
+        
+        
         @media screen and (min-width: 1000px) {
             position: relative;
             text-align: center;
@@ -65,6 +73,12 @@
     
             address {
                 @include font($fw: 600, $fs: 14px, $lh: 18px, $ls: 0.02em);
+            }
+        }
+        @media screen and (min-width: 1400px) {
+            @include font($fw: 700, $fs: 25px, $lh: 38px, $ls: 0.02em);
+            address {
+                @include font($fw: 600, $fs: 16px, $lh: 23px, $ls: 0.02em);
             }
         }
     }
@@ -77,19 +91,25 @@
         width: 20px;
         height: 20px;
         margin-right: 8px;
+        fill: #FFFFFF;
     }
     &__text {
         margin-top: 20px;
         @include font($fw: 400, $fs: 14px, $lh: 16px, $ls: 0.02em);
         @media screen and (min-width: 1000px) {
+            margin: 0;
+            @include font($fw: 400, $fs: 11px, $lh: 14px, $ls: 0.02em);
             position: absolute;
-            margin: 8px;
-            top: 30px;
-            left: 45px;
+            top: 28px;
+            left: 50px;
+        }
+        @media screen and (min-width: 1400px) {
+            @include font($fw: 400, $fs: 13px, $lh: 20px, $ls: 0.02em);
+            top: 32px;
         }
     }
 }
-.nav-menu {
+.button-menu {
     border: 0;
     background-color: var(--primary-bg-color);
     padding: 0;
@@ -103,6 +123,7 @@
         border: 0;
         width: 40px;
         height: 40px;
+        fill: #FFFFFF;
 
         .nav-menu:hover & {
             fill: var(--brand-color);
@@ -119,7 +140,7 @@
     background-image: url(../img/bg@2x.png);
     background-size: cover;
 
-    padding: 60px 40px;
+    padding: 80px 10px;
 
     display: flex;
     flex-direction: column;
@@ -140,6 +161,23 @@
         background-color: var(--primary-bg-color);
         padding: 0;
     }
+    &__address {
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        text-align: center;
+        color: var(--secondary-text-color);
+        @include font($fw: 700, $fs: 20px, $lh: 26px, $ls: 0.02em);
+        
+        &-icon {
+            fill: var(--secondary-text-color);
+            width: 20px;
+            height: 20px;
+        }
+        
+    }
 
     &__close-icon {
         border: 0;
@@ -148,7 +186,7 @@
         fill: #FFFFFF;
 
         .mobile-menu__close-button:hover & {
-            fill: #be7c7c;
+            fill: var(--brand-color);
         }
     }
 
@@ -160,27 +198,28 @@
         gap: 40px;
     }
     &__item {
-        font-family: sans-serif;
         color: var(--primary-text-color);
     }
     &__subtitle {
+        @include font($fw: 700, $fs: 20px, $lh: 26px, $ls: 0.02em);
         text-align: center;
-        @include font($fw: 700, $fs: 18px, $lh: 21px, $ls: 0.02em);
 
     }
 
     &__link {
-        @include font($fw: 600, $fs: 18px, $lh: 21px, $ls: 0.02em);
+        @include font($fw: 700, $fs: 22px, $lh: 28px, $ls: 0.02em);
+        text-align: center;
         color: var(--primary-text-color);
 
         &:hover {
-            color: var(--brand-color);
+            color: #b1b1b1;
         }
     }
     &__icon {
         width: 20px;
         height: 20px;
         margin-right: 8px;
+        fill: #FFFFFF;
     }
 }
 
