--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 @import './layout/hero';
 // @import './layout/content';
 // @import './layout/work';
-// @import './layout/team';
+@import './layout/team';
 // @import './layout/client';
 // @import './layout/footer';
 // @import './layout/portfolio-btn';
