--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -138,7 +138,9 @@
     height: 100vh;
     background-color: var(--primary-bg-color);
     background-image: url(../img/bg@2x.png);
-    background-size: cover;
+    background-size: 2400px 500px;
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
 
     padding: 80px 10px;
 
@@ -157,13 +159,19 @@
         position: absolute;
         top: 10px;
         right: 15px;
-        border: 0;
+        border-radius: 50%;
+        border: 1px solid #FFFFFF;
+        width: 43px;
+        height: 43px;
         background-color: var(--primary-bg-color);
         padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     &__address {
         position: absolute;
-        bottom: 30px;
+        bottom: 100px;
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
