--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,9 +12,10 @@
 
 @import './layout/header';
 @import './layout/hero';
-// @import './layout/content';
+
 // @import './layout/work';
 @import './layout/team';
+@import './layout/about';
 // @import './layout/client';
 // @import './layout/footer';
 // @import './layout/portfolio-btn';
