--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,6 @@ address {
   margin: 0 auto;
   padding: 0;
   max-width: 1920px;
-  outline: 1px solid red;
 }
 
 .container {
@@ -69,7 +68,6 @@ address {
   margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;
-  outline: 1px solid green;
 }
 
 .header {
@@ -439,7 +437,6 @@ address {
 }
 
 .entery {
-  outline: 1px solid blue;
   padding: 50px 30px;
   margin-left: auto;
   margin-right: auto;
@@ -608,9 +605,17 @@ address {
   display: block;
   border: 1px solid #EEEEEE;
   border-radius: 3px;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
 }
 .card__item:hover {
   border: 0px solid #EEEEEE;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -674,4 +679,29 @@ address {
 }
 .card__button:active {
   background-color: #8c741e;
+}
+
+.about {
+  background-image: url(../img/bg-mobile.png), url(../img/bg-top.png);
+  background-size: 960px 200px;
+  background-repeat: no-repeat;
+  background-position: 100% 100%, 0 0;
+}
+@media screen and (min-width: 900px) {
+  .about {
+    background-image: url(../img/bg-tablet.png), url(../img/bg-top.png);
+    background-size: 1399px 250px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about {
+    background-color: var(--primary-bg-color);
+    background-image: url(../img/bg@2x.png), url(../img/bg-top.png);
+    background-repeat: no-repeat;
+    background-size: 1920px 467px;
+  }
+}
+
+.info {
+  height: 900px;
 }/*# sourceMappingURL=main.css.map */
