--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -32,8 +32,12 @@
         display: block;
         border: 1px solid #EEEEEE;
         border-radius: 3px;
+        transition-property: transform;
+        transition-duration: 500ms;
+
         &:hover {
             border: 0px solid #EEEEEE;
+            transform: scale(1.05);
             box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
         }
         @media screen and (min-width: 500px) {
