--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -2,8 +2,8 @@
     min-width: 320px;
     margin: 0 auto;
     padding: 0;
-    max-width: 1920px;
-    // outline: 1px solid red;
+    max-width: 1400px;
+    outline: 1px solid red;
     // @media screen and (min-width: 480px) {
     //     width: 480px;
     // }
