--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,10 +1,10 @@
 .container {
     min-width: 320px;
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
-    // outline: 1px solid green;
+    outline: 1px solid green;
 
     // @media screen and (min-width: 480px) {
     //     max-width: 480px;
