--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -4,31 +4,26 @@
     background-repeat: no-repeat;
     background-position: 100% 100%;
 
-    @media screen and (min-width: 900px) { 
+    @media screen and (min-width: 800px) { 
         background-image: url(../img/bg-tablet.png);
-        background-size: 1399px 250px;
+        background-size: 1200px 200px;
         background-repeat: no-repeat;
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1050px) {
         background-color: var(--primary-bg-color);
-        background-image: url(../img/bg@2x.png), url(../img/children.png);
+        background-image: url(../img/bg@2x.png), url(../img/children1.png);
         background-repeat: no-repeat;
-        background-size: 1920px 467px, 1148px 1260px;
+        background-size: 1400px 300px, 750px 700px;
         background-position: 100% 100%, 100% 100%;
-        padding-top: 190px;
-        padding-bottom: 480px;
-    }
-    @media screen and (min-width: 1400px) {
-        padding-top: 190px;
-        padding-bottom: 480px;
-        
+        padding-top: 90px;
+        padding-bottom: 90px;
     }
     
 }
 .hero-wrapper {
     display: block;
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1050px) {
         display: flex;
     }
 }
@@ -43,7 +38,7 @@
     flex-direction: column;
     align-items: center;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1050px) {
         padding: 0;
         margin-left: 0;
         height: 468px;
@@ -60,7 +55,7 @@
         @media screen and (min-width: 768px) {
             @include font($fw: 700, $fs: 36px, $lh: 40px, $ls: -1px);
         }
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 1050px) {
             text-align: start;
             @include font($fw: 700, $fs: 43px, $lh: 48px, $ls: -1px);
         }
@@ -77,7 +72,7 @@
         @media screen and (min-width: 768px) {
             @include font($fw: 500, $fs: 22px, $lh: 28px);
         }
-        @media screen and (min-width: 1200px) {
+        @media screen and (min-width: 1050px) {
             text-align: start;
             @include font($fw: 500, $fs: 24px, $lh: 30px);
         }
@@ -94,7 +89,7 @@
         background: #FED84C;
         border-radius: 8px;
         border: none;
-        @media screen and (min-width: 1400px) {
+        @media screen and (min-width: 1050px) {
             margin-top: 20px;
             width: 386px;
             height: 88px;
